--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,8 @@
 
 # ランダムメッセージ
 # Discrodに追加・削除コマンドを追加したので、ローカル側を正とします。
+# [
+#     "{name}が{vc_name}に不法入国したようです。逮捕して！",
+#     "{name}、遂に「{vc_name}」デビュー！"
+# ]
 /config/rand_msg.json
