--- a/config/discord.json5
+++ b/config/discord.json5
@@ -1,3 +1,3 @@
 {
-    "bot_token": "{bot token here}",
+    "bot_token": "OTEzMjk2NTQ5NDg2OTMxOTg4.GTK3uW.CPAPkmaZqNAQi5IeqvvrgPcxLHC1WYUcaHPRGk",
 }
